# SWE-ABS

./: .gitattributes  .gitignore  INSTALLATION_GUIDE.md  LICENSE  README.md  main.py  pyproject.toml  setup.sh
SWE-bench_Pro-os/: eval_agent.sh  eval_gold.sh  eval_mutation_aug.sh  eval_mutation_w_aug_test.sh  get_line.sh  init_eval.sh  pyproject.toml  test_commands_clean.json
SWE-bench_Pro-os/docs/: coverage_mechanism.md
SWE-bench_Pro-os/helper_code/: image_uri.py
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-0e07f3c9bace416cbab078a30eae972868c0a8a3-vf2cf3cbd463b7ad942381f1c6d077626485a1e9e/: test_command.sh
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-22368b996ee0e5f11a5189b400b33af3cc8d925a-v4fbcfae8b15e4ce5d132c408bca69ebb9cf146ed/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-236ac32303c7ead1ed52cc5746a9fc076de40c56-vnan/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-397835a05a8e2897324e566b41c5e616e172b4af-v89631a1cdb318276acb48860c5d78077211397c6/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-4030f18a0432ffc17d887d739bcfafb1b6a75509-vd500ebb181b1d24b9e1e74f2495555de5431c8d0/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-6489e9fd9ed16ea743cc5627f4d86c72fbdb3a8a-v2c59007b1005cd5cd14cbb523ca5229db1fd2dd8/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-76c6e30282906ac664f2c9278fc90999b27b1f48-vd59a5728dfc977f44533186ace531248c2917516/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-8ca65b0c78c67c1653487c02d1135e1b702185e1-vf2cf3cbd463b7ad942381f1c6d077626485a1e9e/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_NodeBB__NodeBB-cfc237c2b79d8c731bbfc6cadf977ed530bfd57a-v0495b863a912fbff5749c67e860612b91825407c/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_ansible__ansible-164881d871964aa64e0f911d03ae270acbad253c-v390e508d27db7a51eece36bb6d9698b63a5b638a/: run_script_coverage.sh
SWE-bench_Pro-os/run_scripts/instance_ansible__ansible-1bd7dcf339dd8b6c50bc16670be2448a206f4fdb-vba6da65a0f3baefda7a058ebbd0a8dcafb8512f5/: run_script_coverage.sh
SWE-bench_Pro-os/run_test/: eval_model_test_patch.py  eval_model_test_patch_aug.py  eval_test.py  get_line_number.py  init_eval.py  probe_js_ts.py
SWE-bench_Pro-os/utils/: constants.py  coverage_parse_utils.py  logging_utils.py  must_coverage_utils.py  parser_util.py  run_util.py  unified_log_parsers.py
(+191 files in other folders)
