[project]
name = "swe-bench-pro"
version = "0.1.0"
description = "SWE-bench Pro evaluation framework"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "helper_code*", "coverage_autogen*", "run_test*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
